Implementazione di Spring Security effettuata.
Con Postman sembra funzionare tutto